# aggregated-dependency-score

./: .gitignore  CODEOWNERS  LICENSE  LICENSE-3rdparty.csv  NOTICE  README.md  aggregated-dependency-score.go  aggregated-dependency-score_test.go  aggregated_dependency_score.py  aggregated_dependency_score_test.py  demo.py  deps_dot_dev.py  depsdotdev.go  go.mod  go.sum  gopkg.in.go  gopkg.in_test.go  packages.py  packages_test.py  score-trustworthiness-conversion.go  score-trustworthiness-conversion_test.go  test-data.json
.github/workflows/: test.yml
cmd/depscore/: depscore.go  go.mod  go.sum
cmd/integration-tests/: integration-tests.go
depsdotdev/: depsdotdev.go  ecosystems.go  go.mod
python/: README.md  demo.py  pyproject.toml
python/aggregdepscore/: __init__.py  deps_dot_dev.py
python/tests/: aggregated_dependency_score_test.py  packages_test.py
