[tool.poetry]
name = "aggregdepscore"
version = "0.1.0"
description = ""
authors = ["Cédric Van Rompay <cedric.vanrompay@datadoghq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
